--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,10 @@
     "dev": "next"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.0.4",
     "google-protobuf": "^3.6.1",
+    "grpc": "^1.24.2",
+    "grpc-js-repository": "grpc/grpc-node",
     "grpc-web": "^1.0.2",
     "grpc-web-client": "^0.6.3",
     "next": "^9.4.4",
